更新广域网通信

--- a/广域网通信.md
+++ b/广域网通信.md
@@ -48,5 +48,9 @@
 
 差错控制：检测和纠正传输错误的机制。检错码：CRC，纠错码：海明码
 
+> 停等协议
 
+- 工作原理：发送站发一帧，收到应答信号后再发送下一帧，接收站每收到一帧后回送一个应答信号（ACK），表示愿意接收下一帧，如果接收站不应答，发送站必须等待。
+- T = T~a发~ + T~a传~ + T~b发~ + T~b传~ ≈ T~a发~ + 2T~传~
+- 
 
